# gitchat

./: main.py  pyproject.toml
app/: config.py
app/agent/: state.py
app/agent/nodes/: intent_classifier.py
app/core/: identity.py  types.py
app/core/interfaces/: embedding_provider.py  graph_store.py  llm_provider.py  parser.py
app/graph/: builder.py  networkx_store.py
app/ingestion/: file_walker.py  repo_cloner.py
app/parsing/languages/: python_parser.py
app/providers/embeddings/: huggingface_provider.py
app/providers/llm/: factory.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
app/retrieval/: chunker.py  hybrid_retriever.py  vector_store.py
tests/: test_chunker.py  test_config.py  test_graph_builder.py  test_huggingface_provider.py  test_hybrid_retriever.py  test_ingestion.py  test_integration_graph.py  test_integration_parsing.py  test_integration_retrieval.py  test_intent_classifier.py  test_llm_factory.py  test_networkx_store.py  test_ollama_real.py  test_python_parser.py  test_vector_store.py
