[project]
name = "universal-code-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.50",
    "langchain>=1.3.10",
    "pathspec>=1.1.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
