[project]
name = "universal-code-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.6",
    "networkx>=3.6.1",
    "pathspec>=1.1.1",
    "sentence-transformers>=5.6.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
